# classify-devices

./: .gitignore  README.md
SpringBackend/: README.md  build.gradle
SpringBackend/src/main/java/cc/madis/DeviceAPI/: DeviceApiApplication.java
SpringBackend/src/main/java/cc/madis/DeviceAPI/Controllers/: ClassificationController.java  Configs.java  DeviceController.java
SpringBackend/src/main/java/cc/madis/DeviceAPI/Entities/: Device.java
SpringBackend/src/main/java/cc/madis/DeviceAPI/Repositories/: DeviceRepository.java
SpringBackend/src/main/java/cc/madis/DeviceAPI/Services/: APIServices.java  CsvServices.java  DeviceService.java  WebServices.java
SpringBackend/src/main/resources/: application.properties
SpringBackend/src/test/java/cc/madis/DeviceAPI/: DeviceApiRestTemplateTests.java
model_api/: README.md  pyproject.toml  requirements.txt
model_api/api/api/: settings.py  urls.py
model_api/api/devices/: models.py  serializer.py  urls.py  views.py
model_api/api/devices/migrations/: 0001_initial.py
model_api/api/predictions/: urls.py  views.py
model_api/api/predictions/utils/: model.py  preprocessing.py
model_api/api/resources/: devices_price_model.pkl
model_api/test/: tests.py
notebooks/: Devices_Price_Classification.ipynb
